2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* core-regset.c (fetch_core_registers): Use get_regcache_arch to get at
	the current architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* corelow.c (get_core_registers): Use get_regcache_arch to get at the
	current architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* bsd-uthread.c (bsd_uthread_fetch_registers)
	(bsd_uthread_store_registers): Use get_regcache_arch to get at the
	current architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* avr-tdep.c (avr_frame_unwind_cache, avr_frame_prev_register): Use
	get_frame_arch to get at the current architecture by frame_info.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* arm-tdep.c (arm_get_next_pc): Replace current_gdbarch by gdbarch.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* armnbsd-nat.c (arm_supply_gregset, fetch_register, store_register)
	(store_regs): Use get_regcache_arch to get at the current architecture
	by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* arm-linux-tdep.c (arm_linux_supply_gregset): Use get_regcache_arch
	to get at the current architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* alphabsd-nat.c (alphabsd_fetch_inferior_registers)
	(alphabsd_store_inferior_registers): Use get_regcache_arch to get at
	the current architecture by regcache.

2007-10-30  Markus Deuling  <deuling@de.ibm.com>

	* ada-lang.c (ada_language_arch_info): Replace current_gdbarch by
	gdbarch.

2007-10-30  Daniel Jacobowitz  <dan@codesourcery.com>

	* ppc-sysv-tdep.c (ppc_sysv_abi_push_dummy_call): Check the selected
	soft float and vector ABIs.  Support the generic vector ABI for
	AltiVec types.
	(do_ppc_sysv_return_value): Likewise.  Correct argument types and
	casts.
	(ppc64_sysv_abi_push_dummy_call): Assert that floating point is
	supported.
	* ppc-tdep.h (enum powerpc_vector_abi): New.